# cpplm

./: .gitignore  CMakeLists.txt  README.md  gcovr.cfg
cmake/: utils.cmake
cpplm/: config.hpp  dataset.cpp  dataset.hpp  model.cpp  model.hpp  modules.cpp  modules.hpp
scripts/: test
tests/: model.test.cpp  modules.test.cpp
